2006-11-18  Noel O'Boyle <baoilleach@gmail.com>

	* scripts/python/testpybel.py: Needed to relax one of the tests of
	molecular weight, as it was failing for the OB2.1b2 snapshot (there
	must have been some changes to the atomic masses). Also,
	corrected tolerance tests to use the absolute value of the difference
	rather than the actual value.
	
2006-11-18  Noel O'Boyle <baoilleach@gmail.com>

	* scripts/python/setup.py, pyopenbabel.py, testpyopenbabel.py,
	pyopenbabelapi.html: Changed all references to pyopenbabel to pybel
	(new name). Also, corrected minor typo in docstring in pybel.py.

2006-11-17 Chris Morley <ob@gaseq.co.uk>

	* src/formats/xml/cmlformat.cpp: mods to input and output properties
	with the title attribute on <property>, as requested by Carsten Niehaus. 
	
2006-11-17 Chris Morley <ob@gaseq.co.uk>

	* src/formats/turbomoleformat.cpp: Added input and output options to
	read and write in Angstroms (default is bohr).
	Modified WriteMolecule() so that the use of strlwr doesn't corrupt
	etab. (Was apparent only in GUI where etab persists between molecules.)
	
	* src/obconversion.cpp: changed some results of string finds to
	std::string::size_type. 

2006-11-15  Noel O'Boyle <baoilleach@gmail.com>

	* scripts/python/pyopenbabel.py: Updated to be consistent, fast, pass
	all unit tests, and to have API documentation in docstrings.

	* scripts/python/testpyopenbabel.py: Added complete coverage unit tests
	for pyopenbabel.py

	* scripts/python/test/*: Removed previous attempts at testing

	* scripts/python/pyopenbabel.txt: Removed previous attempts at
	providing documentation (we now have a wiki, and API documentation)

	* scripts/python/head.sdf: Added small test file, used by
	testpyopenbabel.py

	* scripts/python/pyopenbabelapi.html: Added API documentation for
	pyopenbabel.py, automatically generated using "pydoc -w"


2006-11-09  Donald E. Curtis <dcurtis3@sourceforge.net>

	* src/formats/gamessformat.cpp: Gamess output parsing now only gathers